WIP changes for IE8 #248

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -162,6 +162,7 @@
     {% block bottom_scripts %}
     <script type="text/javascript" src="{{ STATIC_URL }}js/core/jquery-ui-timepicker-addon.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/core/bootstrap.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}js/core/css3-mediaqueries.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/core/app.js"></script>
     {% endblock bottom_scripts %}
     <script type="text/javascript">
