--- a/main/templates/files/ready/file_list_item.html
+++ b/main/templates/files/ready/file_list_item.html
@@ -1,11 +1,11 @@
-<li class="well" style="overflow:hidden">
+<li class="well tight course-list-item" style="overflow:hidden">
     <div class="pull-left" style="margin-left:-10px; width:50px;">
         <i class="icon-file" style="font-size:40px; color:#999;opacity:.3"></i>
 	{% if item.file.dl_link %}
-        <div style="margin-top:7px;text-align:center;font-weight:bold"><a href="{{item.file.dl_link}}" style="padding:0px 10px 0px" class="btn">DL</a></div>
+        <div style="margin-top:7px;text-align:center;font-weight:bold"><a href="{{item.file.dl_link}}" style="padding:0px 1px 0px 7px;margin-top:5px;" class="btn"><i class="icon-download-alt"></i></a></div>
 	{% endif %}
     </div>
-    <div class="pull-left">
+    <div style="overflow:hidden;margin-right:10px">
         <h4 style="margin-top:10px;display:inline;"><a href="{{item.file.file.url}}">{{item.file.title}}</a></h4>
     </div>
 </li>
