--- a/main/templates/videos/ready/video_list_item.html
+++ b/main/templates/videos/ready/video_list_item.html
@@ -5,7 +5,7 @@
 	<div style="margin-top:7px;text-align:center;font-weight:bold"><a href="{{item.video.dl_link}}" style="padding:0px 1px 0px 7px;margin-top:5px;" class="btn"><i class="icon-download-alt"></i></a></div>
 	{% endif %}
     </div>
-    <div style="overflow:hidden">
+    <div style="overflow:hidden;margin-right:10px">
         <h4 style="margin-top:10px;display:inline;"><a href="{% url 'courses.videos.views.view' common_page_data.course_prefix common_page_data.course_suffix item.video.slug %}">{{item.video.title}}</a> ({{item.video.runtime}})</h4>
 	<div>{{item.video.description}}</div>
         <div class="progress progress-danger progress-striped">
