--- a/main/templates/accounts/profile.html
+++ b/main/templates/accounts/profile.html
@@ -14,6 +14,10 @@
             <li><strong>First Name:</strong> {{ user.first_name }}</li>
             <li><strong>Last Name:</strong> {{ user.last_name }}</li>
             <li><strong>Email:</strong> {{ user.email }}</li>
+	    <li><strong>Year of Birth:</strong> {{ user.get_profile.birth_year }}</li>
+	    <li><strong>Gender:</strong> {{user.get_profile.gender }}</li>
+	    <li><strong>Education:</strong> {{user.get_profile.education }}</li>
+	    <li><strong>Work:</strong> {{user.get_profile.work }}</li>
 	    <li class="pull-left"><strong>Courses:</strong></li>
 	    {% if courses %}
 	    <ul class="unstyled pull-left">
