Custom edit user profile form fields

--- a/main/templates/accounts/profile.html
+++ b/main/templates/accounts/profile.html
@@ -13,7 +13,7 @@
             <li><strong>Username:</strong> {{ user.username }}</li>
             <li><strong>First Name:</strong> {{ user.first_name }}</li>
             <li><strong>Last Name:</strong> {{ user.last_name }}</li>
-            <li><strong>Email:</strong> {{ user.email }}</li>
+            <li><strong>E-mail:</strong> {{ user.email }}</li>
 	    <li><strong>Year of Birth:</strong> {{ user.get_profile.birth_year }}</li>
 	    <li><strong>Gender:</strong> {{user.get_profile.gender }}</li>
 	    <li><strong>Education:</strong> {{user.get_profile.education }}</li>
