resolved conflicts and merged in de48e8d

--- a/main/templates/files/ready/file_list_item.html
+++ b/main/templates/files/ready/file_list_item.html
@@ -1,8 +1,8 @@
 <li class="well tight course-list-item" style="overflow:hidden">
     <div class="pull-left" style="margin-left:-10px; width:50px;">
-        <i class="icon-file" style="font-size:40px; color:#999;opacity:.3"></i>
+        <em class="icon-file" style="font-size:40px; color:#999;opacity:.3"></em>
 	{% if item.file.dl_link %}
-        <div style="margin-top:7px;text-align:center;font-weight:bold"><a href="{{item.file.dl_link}}" style="padding:0px 1px 0px 7px;margin-top:5px;" class="btn"><i class="icon-download-alt"></i></a></div>
+        <div style="margin-top:7px;text-align:center;font-weight:bold"><a href="{{item.file.dl_link}}" style="padding:0px 1px 0px 7px;margin-top:5px;" class="btn"><em class="icon-download-alt"></em></a></div>
 	{% endif %}
     </div>
     <div style="overflow:hidden;margin-right:10px">
