--- a/main/templates/problemsets/ready/problemset_list_item.html
+++ b/main/templates/problemsets/ready/problemset_list_item.html
@@ -1,6 +1,6 @@
 <li class="well tight course-list-item" style="overflow:hidden">
     <div class="pull-left" style="margin-left:-10px; width:50px;">
-        <i class="icon-pencil" style="font-size:40px; color:#999;opacity:.3"></i>
+        <em class="icon-pencil" style="font-size:40px; color:#999;opacity:.3"></em>
     </div>
     <div style="overflow:hidden;margin-right:10px">
         <h4 style="margin-top:10px;display:inline;"><a href="problemsets/{{item.problem_set.slug}}">{{item.problem_set.title}}</a></h4>
