--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -41,7 +41,7 @@
                         <!--form class="navbar-search hidden-phone" action="">
                             <div class="input-append">
                                 <input class="span2 search-query" placeholder="Search" id="appendedInputButton" size="16" type="text">
-                                <button class="btn btn-inverse btn-search" type="button"><i class="icon-search"></i></button>
+                                <button class="btn btn-inverse btn-search" type="button"><em class="icon-search"></em></button>
                             </div>
                         </form-->
                     </div>
@@ -92,7 +92,7 @@
                 <li class="hidden-phone"><a href="{% url 'registration_register' %}?pre={{common_page_data.course_prefix}}&post={{common_page_data.course_suffix}}" class="btn">Register</a></li>
                 {% endif %}
             {% endif %}
-                <li class="visible-phone"><a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"><i class="icon-reorder"></i></a></li>
+                <li class="visible-phone"><a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"><em class="icon-reorder"></em></a></li>
             </div>
             {% endblock topnav %}
         </div>
@@ -135,7 +135,7 @@
         <form action="{% url 'auth_login' %}" method="POST" class="form-horizontal">
         <div class="modal-body">
             <div class="alert alert-info">
-                <i class="icon-info-sign"></i>New to Stanford Online? <strong><a href="{% url 'registration_register' %}?pre={{common_page_data.course_prefix}}&post={{common_page_data.course_suffix}}">Register here</a></strong>.
+                <em class="icon-info-sign"></em>New to Stanford Online? <strong><a href="{% url 'registration_register' %}?pre={{common_page_data.course_prefix}}&post={{common_page_data.course_suffix}}">Register here</a></strong>.
             </div>
             <fieldset>
                 <div class="control-group">
