--- a/main/templates/course_base.html
+++ b/main/templates/course_base.html
@@ -68,16 +68,16 @@
 {% if messages %}
     {% for message in messages %}
         {% if 'success' in message.tags %}
-         <div class="alert alert-success"><i class="icon-ok"></i><button class="close" data-dismiss="alert">×</button>{{ message }}</div>
+         <div class="alert alert-success"><em class="icon-ok"></em><button class="close" data-dismiss="alert">×</button>{{ message }}</div>
         {% endif %}
         {% if 'error' in message.tags %}
-        <div class="alert alert-error"><i class="icon-fire"></i><button class="close" data-dismiss="alert">×</button>{{ message }}</div>
+        <div class="alert alert-error"><em class="icon-fire"></em><button class="close" data-dismiss="alert">×</button>{{ message }}</div>
         {% endif %}
         {% if 'warning' in message.tags %}
-        <div class="alert alert-warning"><i class="icon-warning-sign"></i><button class="close" data-dismiss="alert">×</button>{{ message }}</div>
+        <div class="alert alert-warning"><em class="icon-warning-sign"></em><button class="close" data-dismiss="alert">×</button>{{ message }}</div>
         {% endif %}
         {% if 'info' in message.tags %}
-        <div class="alert alert-info"><i class="icon-info-sign"></i><button class="close" data-dismiss="alert">×</button>{{ message }}</div>
+        <div class="alert alert-info"><em class="icon-info-sign"></em><button class="close" data-dismiss="alert">×</button>{{ message }}</div>
         {% endif %}
 
     {% endfor %}
