--- a/main/templates/problemsets/draft/problem_set_management_section.html
+++ b/main/templates/problemsets/draft/problem_set_management_section.html
@@ -75,7 +75,7 @@
         
         {% block addl_content_management_content %}{% endblock addl_content_management_content %}
     </div>
-    <label class="pull-right"><b>With selected:</b></label>
+    <label class="pull-right"><strong>With selected:</strong></label>
 </div>
 <script type="text/javascript">
 function getCheckedIds() {
