--- a/main/templates/course_base.html
+++ b/main/templates/course_base.html
@@ -6,13 +6,13 @@
 <div class="navbar">
     <div class="navbar-inner nav-collapse collapse">
         <div class="container-fluid">
-            <ul class="nav">
+            <ul class="nav" role="navigation">
                 <li {% block home_link_class %}{% endblock home_link_class %}>
                     <a href="{% url 'courses.views.main' common_page_data.course_prefix common_page_data.course_suffix %}">Home</a>
                 </li>
                 {% if common_page_data.course_mode == 'draft' or common_page_data.course_info_pages|length > 0 %}
                 <li class="dropdown{% block course_info_link_class %}{% endblock course_info_link_class %}">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Course Info<b class="caret"></b></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Course Info<em class="caret"></em></a>
                     <ul class="dropdown-menu">
                         {% for page in common_page_data.course_info_pages %}
                             <li><a href="{% url 'courses.additional_pages.views.main' common_page_data.course_prefix common_page_data.course_suffix  page.slug %}">{{page.title}}</a></li>
@@ -49,7 +49,7 @@
                 {% if common_page_data.can_switch_mode or common_page_data.is_course_admin %}
                     {% if common_page_data.course_mode == 'draft' %}
                         <li class="dropdown"{% block course_admin_link %}{% endblock course_admin_link %}>
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Course Administration<b class="caret"></b></a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Course Administration<em class="caret"></em></a>
                             <ul class="dropdown-menu">
                               <li><a href="{% url 'courses.email_members.views.email_members' common_page_data.course_prefix common_page_data.course_suffix %}">Email Course Members</a></li>
                               <!-- <li><a href="{% url 'courses.admin_views.admin' common_page_data.course_prefix common_page_data.course_suffix %}">Coming Soon!</a></li> -->
@@ -86,7 +86,7 @@
 {% endblock messages %}
 {% block course_notification %}{% endblock course_notification %}
 
-<div class="container-fluid body-content">
+<div id="main-content" class="container-fluid body-content" role="main">
     <div class="row-fluid">
         {% block l_column_content %}{% endblock %}
         
