a few bug fixes #709

--- a/main/templates/previews/cs144--Fall2012.html
+++ b/main/templates/previews/cs144--Fall2012.html
@@ -2,7 +2,7 @@
 {% block signup_form %}
 <div class="span5">
 <div class="alert alert-success"><i class="icon-ok"></i>
-This is a Stanford University course and not open to the public.  You will be able to sign-in to the course with your SUNet ID starting September 24.
+This is a Stanford University course and not open to the public.  The public edition is <a href="http://networking.class.stanford.edu">here</a>.  You will be able to sign-in to the course with your SUNet ID starting September 24.
 </div>
 </div>
 {% endblock signup_form %}
