--- a/main/c2g/static/css/core/body.css
+++ b/main/c2g/static/css/core/body.css
@@ -404,6 +404,11 @@ small.date {
   margin-bottom: 9px;
 }
 
+/* for datetime fields */
+input[data-datetimepicker] {
+  width: auto;
+}
+
 /* Footer
 -------------------------------------------------- */
 
