Changed wording from 'Unset' to 'Remove'

--- a/main/templates/courses/draft/course_content_management_section.html
+++ b/main/templates/courses/draft/course_content_management_section.html
@@ -46,7 +46,7 @@
 	    {{ form.live_datetime }}
             <input type="submit" name="action" value="Set Live Date" class="btn" style='margin: 0 0 9px 0' onclick="clicked=this.value"/>
 	    or
-	    <input type="submit" name="action" value="Unset Live Date" class="btn" style='margin: 0 0 9px 0' onclick="clicked=this.value" />
+	    <input type="submit" name="action" value="Remove Live Date" class="btn" style='margin: 0 0 9px 0' onclick="clicked=this.value" />
 	    {{ form.live_datetime.errors }}
             <input type="hidden" name="course_prefix" value="{{ common_page_data.course_prefix }}" />
             <input type="hidden" name="course_suffix" value="{{ common_page_data.course_suffix }}" />
@@ -65,7 +65,7 @@
                     alert('Nothing selected to set the live date for.');
                 }
 	        else {
-	            alert('Nothing selected to unset the live date for.');
+	            alert('Nothing selected to remove the live date for.');
 	        }
                 return false;
             }
