Prereq-feedback from Phil (not hotfix)
Resopnding to email sent from Phil 9/19 10:52 PM PDT.

Also word-wrapped long line from previous change for good meaure, no
text change in there I promise.

--- a/main/templates/previews/cs144--Fall2012.html
+++ b/main/templates/previews/cs144--Fall2012.html
@@ -17,7 +17,18 @@ src="{{STATIC_URL}}preview_media/networking--Fall2012/400x400NetworkingLogo.jpg"
 height="208" title="Image Credit: The Opte Project"/><br/> <!--label><b>Nick McKeown</b></label><br/-->
 </div>
 
-<h3>About the Course</h3> <p align="justify"> CS144 is an introductory course on computer networking, focusing on the Internet as a case study. It focuses on explaining the principles of networks and their design, as well as how the Internet works, ranging from how bits are modulated on wires and in wireless to application-level protocols like BitTorrent and HTTP.  Students implement a handful of low-level protocols and services, including reliable transport, IP forwarding, and a Network Address Translation device. Students gain experience reading and understanding RFCs (Internet protocol specifications) as statements of what a system should do. The course grounds many of the concepts in current practice and recent developments, such as net neutrality and DNS security.
+<h3>About the Course</h3> <p align="justify"> CS144 is an introductory
+course on computer networking, focusing on the Internet as a case
+study. It focuses on explaining the principles of networks and their
+design, as well as how the Internet works, ranging from how bits
+are modulated on wires and in wireless to application-level protocols
+like BitTorrent and HTTP.  Students implement a handful of low-level
+protocols and services, including reliable transport, IP forwarding,
+and a Network Address Translation device. Students gain experience
+reading and understanding RFCs (Internet protocol specifications)
+as statements of what a system should do. The course grounds many
+of the concepts in current practice and recent developments, such
+as net neutrality and DNS security.
  </p>
 
 <h3>Biographies</h3> <div>
@@ -61,9 +72,10 @@ fruit. </p>
 
 
 
-<h3>Prerequisites</h3> <p align="justify">Students need to have taken CS110 and an introductory course in
-probability.  They also need a strong understanding of bits and bytes and knowledge of how computers lay
-out data in memory.</p> </div>
+<h3>Prerequisites</h3> <p align="justify"> 
+Students need to have taken CS110 or an equivalent systems programming class in C at the
+discretion of the instructors.
+</p> </div>
 
 {% endblock course_description %}
 
