--- a/main/c2g/static/css/core/responsive.css
+++ b/main/c2g/static/css/core/responsive.css
@@ -1078,14 +1078,11 @@
       padding: 7px 10px 8px;
       border-right:1px solid #999;
   }
-  /*.nav-collapse.collapse {
+  .nav-collapse.collapse {
     height: auto !important;
     overflow: visible !important;
   }
-<<<<<<< HEAD
-=======
   /*
->>>>>>> 9140de4a8c0fadb62bdb6c14c4f6429c28047a25
   .logo {
     width:308px;
     height:21px;
